@@ -97,6 +97,7 @@
  '(prolog-system (quote swi))
  '(recentf-mode t nil (recentf))
  '(reftex-plug-into-AUCTeX t)
+ '(save-place-limit 100)
  '(sawfish-extra-keyword-list (quote ("add-frame-style" "call-after-load" "call-after-property-changed" "call-after-state-changed" "custom-set-property" "define" "define-structure" "export" "open")))
  '(sawfish-warning-keyword-list (quote ("fixme" "FIXME" "Fixme" "fix me" "Fix me" "!!!" "Grrr" "Bummer" "todo" "TODO" "Todo")))
  '(scroll-bar-mode nil)
